[gd_scene load_steps=13 format=2]

[ext_resource path="res://Inventory.gd" type="Script" id=1]
[ext_resource path="res://asset/inventory.png" type="Texture" id=2]
[ext_resource path="res://ItemDisplay.gd" type="Script" id=3]
[ext_resource path="res://asset/NanumGothic.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://asset/block_asset.png" type="Texture" id=5]
[ext_resource path="res://asset/consume_asset.png" type="Texture" id=6]
[ext_resource path="res://asset/weapon_asset.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 1
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="TileSet" id=3]
0/name = "block_asset.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "block_asset.png 1"
1/texture = ExtResource( 5 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 64, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="TileSet" id=4]
0/name = "consume_asset.png 0"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "consume_asset.png 1"
1/texture = ExtResource( 6 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 64, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="TileSet" id=5]
0/name = "weapon_asset.png 0"
0/texture = ExtResource( 7 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "weapon_asset.png 1"
1/texture = ExtResource( 7 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 64, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "weapon_asset.png 2"
2/texture = ExtResource( 7 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 128, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[node name="Inventory" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Window" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.694118 )
position = Vector2( 192, 64 )
texture = ExtResource( 2 )
centered = false

[node name="ItemDisplay" type="Node2D" parent="."]
position = Vector2( 192, 64 )
script = ExtResource( 3 )

[node name="Control" type="Control" parent="ItemDisplay"]
margin_left = -192.0
margin_top = -64.0
margin_right = -152.0
margin_bottom = -24.0
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlockAsset" type="TileMap" parent="ItemDisplay"]
position = Vector2( -192, -64 )
tile_set = SubResource( 3 )
cell_size = Vector2( 48, 48 )
format = 1

[node name="ConsumeAsset" type="TileMap" parent="ItemDisplay"]
tile_set = SubResource( 4 )
format = 1

[node name="WeaponAsset" type="TileMap" parent="ItemDisplay"]
tile_set = SubResource( 5 )
format = 1
